--- a/script.common.plugin.cache/resources/language/English/strings.xml
+++ b/script.common.plugin.cache/resources/language/English/strings.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
-    <string id="001">General</string>
-    <string id="002">Debug</string>
-    <string id="003">Autostart with XBMC</string>
-    <string id="004">Timeout in seconds</string>
-    <string id="005">Listen on Port (Windows only)</string>
+    <string id="30001">General</string>
+    <string id="30002">Debug</string>
+    <string id="30003">Autostart with XBMC</string>
+    <string id="30004">Timeout in seconds</string>
+    <string id="30005">Listen on Port (Windows only)</string>
+    <string id="30006">Custom Path: </string>
 
 
-    <string id="100">Error.</string>
+    <string id="30100">Error.</string>
 
-    <string id="200">Failed to start commoncache. Check log.</string>
+    <string id="30200">Failed to start commoncache. Check log.</string>
 </strings>
